fix rutracker curl cmd