@@ -3,6 +3,7 @@ package sb.tasks.service;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
 
@@ -51,17 +52,18 @@ public final class CurlRutracker {
         }
 
         private List<String> downloadCmd(String num, File file) {
-            return List.of(
+            List<String> cmd = Arrays.asList(
                     "/usr/bin/curl",
                     "--cookie", COOKIES,
                     "--referer", String.format("http://rutracker.org/forum/viewtopic.php?t=%s", num),
                     "--header", "Content-Type:application/x-www-form-urlencoded",
                     "--header", String.format("t:%s", num),
                     "--data", String.format("t=%s", num),
-                    "--output", file.getName(),
-                    props.curlExtra(),
-                    String.format("http://rutracker.org/forum/dl.php?t=%s", num)
+                    "--output", file.getName()
             );
+            cmd.addAll(Arrays.asList(props.curlExtra().split("\\s+")));
+            cmd.add(String.format("http://rutracker.org/forum/dl.php?t=%s", num));
+            return cmd;
         }
     }
 
@@ -91,20 +93,20 @@ public final class CurlRutracker {
         }
 
         private List<String> cookieCmd() {
-            return List.of(
-                    "/usr/bin/curl",
+            List<String> cmd = Arrays.asList(
+                    "curl",
                     "--retry", "5",
-                    "--data",
-                    "login_username=" + login + "&login_password=" + password + "&login=%%C2%%F5%%EE%%E4",
+                    "--data", "login_username=" + login + "&login_password=" + password + "&login=%%C2%%F5%%EE%%E4",
                     "--output", "login.php",
                     "--insecure",
                     "--silent",
                     "--ipv4",
                     "--user-agent", userAgent,
-                    "--cookie-jar", COOKIES,
-                    props.curlExtra(),
-                    "http://rutracker.org/forum/login.php"
+                    "--cookie-jar", COOKIES
             );
+            cmd.addAll(Arrays.asList(props.curlExtra().split("\\s+")));
+            cmd.add("http://rutracker.org/forum/login.php");
+            return cmd;
         }
     }
 }
